# enum_variant_accessors

./: Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs
tests/: derive_ok.rs  edge_cases.rs  expected_failures_runner.rs  failures_runner.rs  generics.rs  smoke.rs  visibility_and_derives.rs
tests/expected_failures/: as_variant_with_named_fields.rs  as_variant_with_named_fields.stderr  as_variant_with_named_fields_mut.rs  as_variant_with_named_fields_mut.stderr  derive_on_struct.rs  derive_on_struct.stderr
tests/failures/: named_fields.rs  named_fields.stderr
